# bgzfiltra

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: bgzf  bgzfiltra.toml  pyproject.toml
src/bgzfiltra/: main.py
src/bgznet/: main.py
src/persistence/: __init__.py  questdb.py
src/tests/: test_main.py
src/toml_config/: settings.py
